k3s/backend-wandoor/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wandoor-backend
  namespace: wandoor
spec:
  replicas: 2
  selector:
    matchLabels:
      app: wandoor-backend
  template:
    metadata:
      labels:
        app: wandoor-backend
    spec:
      containers:
        - name: backend
          image: jrtr1/wandoor-backend-app:backend-09a581fdf33780e5d5eacfabeca3b9f6f90d24ca
          imagePullPolicy: Always
          ports:
            - containerPort: 8081
              protocol: TCP
          volumeMounts:
            - name: otel-agent
              mountPath: /otel

      volumes:
        - name: otel-agent
          emptyDir: {}
